--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <img class="logo" src="LOGO.png" alt="logo">
+    <img class="logo" src="logo.png" alt="logo">
     <ul>
         <li><a href="#home">Home</a></li>
         <li><a href="#about">About us</a></li>
